MFG Ready Version/force-app/main/default/objects/mfg_Product_Service_Term__c/mfg_Product_Service_Term__c.object-meta.xml
<CustomObject>
    <label>Product Service Term</label>
    <nameField>
        <displayFormat>PST-{0000000000}</displayFormat>
        <label>Product Service Term Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Service Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>