MFG Ready Version/force-app/main/default/objects/mfg_Product_Service_Term__c/fields/mfg_Service_Level__c.field-meta.xml
<CustomField>
    <fullName>mfg_Service_Level__c</fullName>
    <label>Service Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Subcategory</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>