MFG Ready Version/force-app/main/default/objects/mfg_Product_Service_Term__c/fields/mfg_Service_Term__c.field-meta.xml
<CustomField>
    <fullName>mfg_Service_Term__c</fullName>
    <label>Service Term</label>
    <referenceTo>mfg_Service_Term__c</referenceTo>
    <relationshipLabel>Product Service Terms</relationshipLabel>
    <relationshipName>Product_Service_Terms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>