MFG Ready Version/force-app/main/default/objects/mfg_Product_Service_Term__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>mfg_Covered_Product__c</columns>
    <columns>mfg_Service_Level__c</columns>
    <columns>mfg_Service_Term__c</columns>
    <columns>mfg_Service_Scope_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>